Components(home , MainPage , Navbar , Mission , Important , Hypotheses, EcoSystem with his child components , footer ) , constants, styles , shared

--- a/src/components/Mission/Mission.module.scss
+++ b/src/components/Mission/Mission.module.scss
@@ -10,18 +10,21 @@
     color: #313A4B;
 
     h3 {
-        padding-left: 25px;
+        padding-left: 15px;
     }
 
     p {
-        max-width: 1095px;
+        max-width: 1080px;
         width: 100%;
         font-size: 20px;
         font-size: 20px;
         font-weight: 500;
         line-height: 31px;
-        padding-left: 25px;
+        padding-left: 15px;
         text-align: justify;
+    }
+    img {
+        margin-right: 10px;
     }
 }
 
@@ -32,7 +35,7 @@
 }
 
 .buttonMore {
-    margin-left: 25px;
+    margin-left: 15px;
     max-width: 245px;
     width: 100%;
     padding: 15px;
@@ -42,4 +45,5 @@
     font-size: 18px;
     font-weight: 700;
     background: rgba(255, 255, 255, 0.12);
+    margin-bottom: 25px;
 }
