--- a/src/components/EcoSystem/Sages/Sages.module.scss
+++ b/src/components/EcoSystem/Sages/Sages.module.scss
@@ -32,7 +32,7 @@
     border-radius: 46px;
     background-color: #FFF;
     padding: 15px;
-    border: 1px solid #DD264E;
+    border: 1px solid var(--hexadecimal-color);
     font-size: 18px;
     font-weight: 700;
 }
