--- a/src/components/Mission/Mission.module.scss
+++ b/src/components/Mission/Mission.module.scss
@@ -14,8 +14,8 @@
     }
 
     p {
-        max-width: 1080px;
-        width: 100%;
+        max-width: 1070px;
+        width: 95%;
         font-size: 20px;
         font-size: 20px;
         font-weight: 500;
@@ -40,7 +40,7 @@
     width: 100%;
     padding: 15px;
     border-radius: 46px;
-    border: 2px solid #DD264E;
+    border: 2px solid var(--hexadecimal-color);
     color: #313A4B;
     font-size: 18px;
     font-weight: 700;
