--- a/src/styles/variables/global.scss
+++ b/src/styles/variables/global.scss
@@ -1,3 +1,6 @@
 :root {
-    --font-family-main: "Montserrat", sans-serif;
+    //----------COLOR----------
+    --eigengrau-color: #151C26;
+    --hexadecimal-color:#DD264E;
+
 }
