--- a/src/components/EcoSystem/EcoSystem.module.scss
+++ b/src/components/EcoSystem/EcoSystem.module.scss
@@ -1,6 +1,6 @@
 .EcoSystem {
     font-family: 'Montserrat';
-    max-width: 1920px;
+    max-width: 1925px;
     width: 100%;
     margin-bottom: 15px;
 }
@@ -12,12 +12,12 @@
 }
 
 .ecosystemContent {
-    max-width: 1080px;
+    max-width: 1050px;
     width: 95%;
     text-align: justify;
     line-height: 31px;
     margin: 0 auto;
-    color: #151C26;
+    color: var(--eigengrau-color);
 
     p {
         font-size: 20px;
@@ -26,9 +26,11 @@
 }
 
 .title {
-    margin-left: -15px;
+    margin-left: -17px;
     display: flex;
     align-items: center;
+    margin-top: 15px;
+
 
     img {
         margin-right: 10px;
