--- a/src/components/Hypotheses/Hypotheses.module.scss
+++ b/src/components/Hypotheses/Hypotheses.module.scss
@@ -7,12 +7,12 @@
 }
 
 .hypothesesContent {
-    max-width: 1080px;
+    max-width: 1050px;
     width: 95%;
     text-align: justify;
     line-height: 31px;
     margin: 0 auto;
-    color: #151C26;
+    color: var(--eigengrau-color);
 
     p {
         font-size: 20px;
@@ -69,7 +69,7 @@
         }
 
         button:hover {
-            background-color: #DD264E;
+            background-color: var(--hexadecimal-color);
             color: #FFF
         }
     }
