--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -28,14 +28,13 @@
     width: 33px;
     height: 33px;
     color: #FFF;
-    background-color: #DD264E;
+    background-color: var(--hexadecimal-color);
     border-radius: 100%;
     font-size: 10px;
     font-weight: 500;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 7px;
 }
 
 .signIn {
@@ -46,13 +45,13 @@
     border-radius: 46px;
     color: #313A4B;
     font-weight: 700;
-    border: 1px solid #DD264E;
+    border: 1px solid var(--hexadecimal-color);
     background-color: rgba(255, 255, 255, 0.44);
     padding: 7px;
 }
 
 .signIn:hover {
-    background-color: #DD264E;
+    background-color: var(--hexadecimal-color);
     color: #FFF;
 }
 
