components styles, index

--- a/src/components/EcoSystem/Ambassadors/Ambassadors.module.scss
+++ b/src/components/EcoSystem/Ambassadors/Ambassadors.module.scss
@@ -36,7 +36,7 @@
     padding: 15px;
     border-radius: 46px;
     border: none;
-    color: #FFF;
+    color: var(--white-color);
     background: #EE8842;
     box-shadow: -21px 16px 38px 0px rgba(238, 136, 66, 0.42);
 }
