--- a/src/components/EcoSystem/CompainFriends/CompainFriends.module.scss
+++ b/src/components/EcoSystem/CompainFriends/CompainFriends.module.scss
@@ -36,7 +36,7 @@
     padding: 15px;
     border-radius: 46px;
     border: none;
-    color: #FFF;
+    color: var(--white-color);
     background: #6442EE;
     box-shadow: -21px 16px 38px 0px rgba(100, 66, 238, 0.37)
 }
