--- a/src/components/EcoSystem/Partners/Partners.module.scss
+++ b/src/components/EcoSystem/Partners/Partners.module.scss
@@ -36,9 +36,9 @@
         max-width: 245px;
         width: 100%;
         border-radius: 46px;
-        background-color: #FFF;
+        background-color: var(--white-color);
         padding: 15px;
-        border: 1px solid #C12DD9;
+        border: 1px solid var(--partners-button-color);
         font-size: 18px;
         font-weight: 700;
     }
@@ -52,8 +52,8 @@
         padding: 15px;
         margin-right: 10px;
         border: none;
-        color: #FFF;
-        background: #C12DD9;
+        color: var(--white-color);
+        background: var(--partners-button-color);
         box-shadow: -21px 16px 38px 0px rgba(193, 45, 217, 0.32);
     }
 }
