--- a/src/components/EcoSystem/Sages/Sages.module.scss
+++ b/src/components/EcoSystem/Sages/Sages.module.scss
@@ -30,7 +30,7 @@
     max-width: 245px;
     width: 100%;
     border-radius: 46px;
-    background-color: #FFF;
+    background-color: var(--white-color);
     padding: 15px;
     border: 1px solid var(--hexadecimal-color);
     font-size: 18px;
