--- a/src/components/Hypotheses/Hypotheses.module.scss
+++ b/src/components/Hypotheses/Hypotheses.module.scss
@@ -38,7 +38,7 @@
 
 .hypothesesBgImg {
     max-width: 1925px;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../../shared/assets/image498.jpg');
+    background-image: linear-gradient(var(--hypothese-color), var(--hypothese-color)), url('../../shared/assets/image498.jpg');
 }
 
 .hypothesesDescription {
@@ -58,8 +58,8 @@
             max-height: 84px;
             height: 100%;
             padding: 25px;
-            background-color: #FFF;
-            color: #313A4B;
+            background-color: var(--white-color);
+            color: var(--dark-bluish-color);
             font-size: 18px;
             font-weight: 700;
             text-transform: uppercase;
@@ -70,12 +70,12 @@
 
         button:hover {
             background-color: var(--hexadecimal-color);
-            color: #FFF
+            color: var(--white-color)
         }
     }
 
     .pDiv {
-        color: #FFF;
+        color: var(--white-color);
         max-width: 637px;
         width: 100%;
         max-height: 620px;
