--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -2,7 +2,7 @@
     font-family: 'Montserrat';
     max-width: 1920px;
     width: 100%;
-    box-shadow: 0px 0px 16px rgba(49, 58, 75, 0.11);
+    box-shadow: var(--item-shadow);
 }
 
 .topLine {
@@ -14,7 +14,7 @@
 .title {
     max-width: 1925px;
     width: 100%;
-    box-shadow: 0px 0px 16px rgba(49, 58, 75, 0.11);
+    box-shadow: var(--item-shadow);
 }
 
 .write {
@@ -49,8 +49,8 @@
         padding-left: 10px;
         border-radius: 10px;
         border: 2px solid rgba(0, 0, 0, 0.14);
-        box-shadow: -20px 8px 20px 0px rgba(21, 29, 39, 0.06);
-        color: #303030;
+        box-shadow: var(--input-textarea-shadow);
+        color: var(--input-textarea-color);
         font-size: 20px;
         font-weight: 500;
     }
@@ -60,14 +60,14 @@
         min-width: 300px;
         max-width: 470px;
         height: 140px;
-        min-height:  140px;
+        min-height: 140px;
         max-height: 230px;
         padding: 10px;
         padding: 10px;
         border-radius: 10px;
         border: 2px solid rgba(0, 0, 0, 0.14);
-        box-shadow: -20px 8px 20px 0px rgba(21, 29, 39, 0.06);
-        color: #303030;
+        box-shadow: var(--input-textarea-shadow);
+        color: var(--input-textarea-color);
         font-size: 20px;
         font-weight: 500;
         box-sizing: border-box;
@@ -79,10 +79,10 @@
         height: 50px;
         border-radius: 46px;
         background: var(--hexadecimal-color);
-        box-shadow: -21px 16px 38px 0px rgba(191, 9, 48, 0.21);
+        box-shadow: var(--button-shadow);
         border: none;
         margin-top: 5px;
-        color: #FFF;
+        color: var(--white-color);
         font-size: 18px;
         font-weight: 700;
     }
