--- a/src/components/EcoSystem/Experts/Experts.module.scss
+++ b/src/components/EcoSystem/Experts/Experts.module.scss
@@ -36,7 +36,7 @@
     padding: 15px;
     border-radius: 46px;
     border: none;
-    color: #FFF;
+    color: var(--white-color);
     background: #42CFEE;
     box-shadow: -21px 16px 38px 0px rgba(66, 207, 238, 0.36);
 }
