--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -18,14 +18,14 @@
     text-orientation: mixed;
     transform: rotate(360deg);
     white-space: nowrap;
-    color: #FFF;
+    color: var(--white-color);
 }
 
 
 .line {
     width: 1px;
     height: 50px;
-    background-color: #FFF;
+    background-color: var(--white-color);
     margin: 7px 0;
 }
 
@@ -41,7 +41,7 @@
 .iconItem {
     width: 10px;
     height: 15px;
-    fill: #FFF
+    fill: var(--white-color)
 }
 
 .socialMedia {
@@ -59,7 +59,7 @@
     align-items: center;
     margin: 0 auto;
     align-items: flex-start;
-    color: #FFF;
+    color: var(--white-color);
 }
 
 .ourEcoSystem,
