--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -86,7 +86,7 @@
         height: 50px;
         border-radius: 46px;
         background: var(--hexadecimal-color);
-        color: #FFF;
+        color: var(--white-color);
         font-size: 18px;
         font-weight: 700;
         border: none;
@@ -97,7 +97,7 @@
         height: 50px;
         border-radius: 46px;
         border: 2px solid var(--eigengrau-color);
-        background: rgba(255, 255, 255, 0.12);
+        background: var(--button-more-color);
         color: var(--eigengrau-color);
         font-size: 18px;
         font-weight: 700;
