--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -13,7 +13,7 @@
     position: fixed;
     top: 0;
     z-index: 999;
-    background: #FFF;
+    background: var(--white-color);
 }
 
 .img301 {
@@ -27,7 +27,7 @@
 .eng {
     width: 33px;
     height: 33px;
-    color: #FFF;
+    color: var(--white-color);
     background-color: var(--hexadecimal-color);
     border-radius: 100%;
     font-size: 10px;
@@ -43,7 +43,7 @@
     max-height: 34px;
     height: 100%;
     border-radius: 46px;
-    color: #313A4B;
+    color: var(--dark-bluish-color);
     font-weight: 700;
     border: 1px solid var(--hexadecimal-color);
     background-color: rgba(255, 255, 255, 0.44);
@@ -52,7 +52,7 @@
 
 .signIn:hover {
     background-color: var(--hexadecimal-color);
-    color: #FFF;
+    color: var(--white-color);
 }
 
 .navigation {
@@ -61,7 +61,7 @@
     align-items: center;
 
     a {
-        color: #313A4B;
+        color: var(--dark-bluish-color);
         text-decoration: none;
         padding: 10px;
         font-size: 14px;
@@ -69,8 +69,8 @@
     }
 
     a:hover {
-        color: #FFF;
-        text-shadow: 0 0 1em #313A4B, 0 0 0.2em #313A4B;
+        color: var(--white-color);
+        text-shadow: 0 0 1em var(--dark-bluish-color), 0 0 0.2em var(--dark-bluish-color);
     }
 }
 
