--- a/src/components/News/NewsItem/NewsItem.module.scss
+++ b/src/components/News/NewsItem/NewsItem.module.scss
@@ -3,7 +3,7 @@
     width: 90%;
     max-height: 385px;
     margin-left: 18px;
-    box-shadow: 0px 0px 16px rgba(49, 58, 75, 0.11);
+    box-shadow: var(--item-shadow);
     border-radius: 20px;
     box-sizing: border-box;
 
