--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -49,8 +49,8 @@
     padding: 15px;
     border-radius: 46px;
     background: var(--hexadecimal-color);
-    box-shadow: -21px 16px 38px 0px rgba(191, 9, 48, 0.21);
-    color: #FFF;
+    box-shadow: var(--button-shadow);
+    color: var(--white-color);
     font-size: 18px;
     font-weight: 700;
     display: flex;
