--- a/src/components/Projects/ProjectsItem/ProjectsItem.module.scss
+++ b/src/components/Projects/ProjectsItem/ProjectsItem.module.scss
@@ -3,7 +3,7 @@
     width: 90%;
     margin-left: 18px;
     margin-bottom: 25px;
-    box-shadow: 0px 0px 16px rgba(49, 58, 75, 0.11);
+    box-shadow: var(--item-shadow);
     border-radius: 20px;
     box-sizing: border-box;
 
