--- a/src/styles/variables/global.scss
+++ b/src/styles/variables/global.scss
@@ -2,5 +2,18 @@
     //----------COLOR----------
     --eigengrau-color: #151C26;
     --hexadecimal-color:#DD264E;
+    --white-color:#FFF;
+    --dark-bluish-color:#313A4B;
+    --input-textarea-color:#303030;
+    --button-blue-color:#189387;
+    --partners-button-color:#C12DD9;
+    --button-more-color:rgba(255, 255, 255, 0.12);
+    --hypothese-color:rgba(0, 0, 0, 0.4);
+
+    //----------BOX-SHADOW----------
+
+    --button-shadow: -21px 16px 38px 0px rgba(191, 9, 48, 0.21);
+    --item-shadow: 0px 0px 16px rgba(49, 58, 75, 0.11);
+    --input-textarea-shadow:-20px 8px 20px 0px rgba(21, 29, 39, 0.06);
 
 }
