--- a/src/components/Important/Important.module.scss
+++ b/src/components/Important/Important.module.scss
@@ -1,5 +1,5 @@
 .Important {
-    font-family: 'Montserrat';
+    position: relative;
     max-width: 1920px;
     width: 100%;
     max-height: 780px;
@@ -13,6 +13,7 @@
     line-height: 31px;
     margin: 0 auto;
     margin-top: 15px;
+    z-index: 1;
 }
 
 .topLine {
@@ -22,7 +23,6 @@
 }
 
 .title {
-    margin-left: -15px;
     display: flex;
     align-items: center;
 
@@ -38,4 +38,48 @@
 .importantP {
     font-size: 20px;
     font-weight: 500;
+}
+
+//--------------------------------
+
+.imagesDiv {
+    max-width: 1880px;
+    width: 90%;
+    max-height: 785px;
+    height: 100%;
+    position: absolute;
+    top: 4%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 35px;
+    box-sizing: border-box;
+    z-index: 0;
+}
+
+.firstImg {
+    max-width: 134px;
+    width: 100%;
+    max-height: 134px;
+    height: 100%;
+    transform: rotate(90deg);
+    opacity: 0.5;
+
+    @media (max-width:1340px) {
+        display: none;
+    }
+}
+
+.secondImg {
+    max-width: 640px;
+    width: 100%;
+    max-height: 640px;
+    height: 100%;
+    opacity: 0.5;
+
+    @media (max-width:1340px) {
+        margin: 0 auto;
+    }
 }
