--- a/src/components/Mission/Mission.module.scss
+++ b/src/components/Mission/Mission.module.scss
@@ -1,9 +1,9 @@
 .Mission {
+    position: relative;
     max-width: 1920px;
     width: 100%;
     max-height: 601px;
     height: 100%;
-    font-family: 'Montserrat';
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,6 +29,10 @@
     }
 }
 
+.contentText {
+    z-index: 10;
+}
+
 .missionImg {
     display: flex;
     align-items: center;
@@ -47,4 +51,52 @@
     font-weight: 700;
     background: var(--button-more-color);
     margin-bottom: 25px;
+}
+
+//--------------------------
+
+.imagesDiv {
+    max-width: 1880px;
+    width: 90%;
+    max-height: 785px;
+    height: 100%;
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 35px;
+    box-sizing: border-box;
+    z-index: 0;
+
+    @media (max-width:1340px) {
+        left: 35%;
+    }
+}
+
+.firstImg {
+    max-width: 134px;
+    width: 100%;
+    max-height: 134px;
+    height: 100%;
+    transform: rotate(90deg);
+    opacity: 0.5;
+
+    @media (max-width:1340px) {
+        display: none;
+    }
+}
+
+.secondImg {
+    max-width: 640px;
+    width: 100%;
+    max-height: 640px;
+    height: 100%;
+    opacity: 0.5;
+
+    @media (max-width:1340px) {
+        margin: 0 auto;
+    }
 }
