--- a/src/components/News/NewsItem/NewsItem.module.scss
+++ b/src/components/News/NewsItem/NewsItem.module.scss
@@ -1,7 +1,8 @@
 .newsItem {
-    max-width: 530px;
-    width: 90%;
-    max-height: 385px;
+    max-width: 560px;
+    width: 100%;
+    max-height: 485px;
+    height: 100%;
     margin-left: 18px;
     box-shadow: var(--item-shadow);
     border-radius: 20px;
@@ -14,6 +15,6 @@
 }
 
 .newsItemTexts {
-    padding: 15px;
+    padding: 15px 15px 20px 15px ;
 }
 
