--- a/src/components/EcoSystem/Donors/Donors.module.scss
+++ b/src/components/EcoSystem/Donors/Donors.module.scss
@@ -9,7 +9,7 @@
 
     p {
         max-width: 624px;
-        width: 100%;
+        width: 95%;
         font-size: 20px;
         font-weight: 500;
         line-height: 31px;
@@ -27,11 +27,16 @@
     }
 }
 
+.donors {
+    max-width: 415px;
+    max-height: 391px;
+    margin: 0;
+}
 
 .buttonsDiv {
     display: flex;
     margin-left: 25px;
-    
+
     .buttonMore {
         max-width: 245px;
         width: 100%;
@@ -42,7 +47,7 @@
         font-size: 18px;
         font-weight: 700;
     }
-    
+
     .buttonConnect {
         font-size: 18px;
         font-weight: 700;
