--- a/src/components/EcoSystem/Ambassadors/Ambassadors.module.scss
+++ b/src/components/EcoSystem/Ambassadors/Ambassadors.module.scss
@@ -9,7 +9,7 @@
 
     p {
         max-width: 624px;
-        width: 100%;
+        width: 95%;
         font-size: 20px;
         font-weight: 500;
         line-height: 31px;
@@ -39,4 +39,12 @@
     color: var(--white-color);
     background: #EE8842;
     box-shadow: -21px 16px 38px 0px rgba(238, 136, 66, 0.42);
+}
+
+.ambassadors {
+    max-width: 415px;
+    max-height: 315px;
+    margin: 0;
+    margin-left: 5px;
+    margin-top: 25px;
 }
