--- a/src/components/EcoSystem/Partners/Partners.module.scss
+++ b/src/components/EcoSystem/Partners/Partners.module.scss
@@ -6,10 +6,11 @@
     margin: 0 auto;
     display: flex;
     padding-top: 55px;
+    box-sizing: border-box;
 
     p {
         max-width: 624px;
-        width: 100%;
+        width: 95%;
         font-size: 20px;
         font-weight: 500;
         line-height: 31px;
@@ -65,6 +66,12 @@
     display: flex;
     justify-content: space-evenly;
     padding-top: 35px;
+
+    @media (max-width:1280px) {
+        max-width: 880px;
+        width: 90%;
+        flex-wrap: wrap;
+    }
 }
 
 .partnersIcons {
@@ -77,4 +84,16 @@
     align-items: center;
     margin: 0 auto;
     margin: 0 5px;
+    
+    @media (max-width:1280px) {
+        width: 85%;
+        padding: 15px 0;
+        margin-bottom: 15px;
+    }
+}
+
+.partnersImg{
+    max-width: 405px;
+    max-height: 384px;
+    margin-top: 20px;
 }
