--- a/src/components/EcoSystem/Volunteers/Volunteers.module.scss
+++ b/src/components/EcoSystem/Volunteers/Volunteers.module.scss
@@ -9,7 +9,7 @@
 
     p {
         max-width: 624px;
-        width: 100%;
+        width: 95%;
         font-size: 20px;
         font-weight: 500;
         line-height: 31px;
@@ -56,4 +56,10 @@
         background: #C5D92D;
         box-shadow: -21px 16px 38px 0px rgba(197, 217, 45, 0.29);
     }
+}
+
+.volunteers{
+    max-width: 405px;
+    max-height: 384px;
+    margin-top: 35px;
 }
