--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -92,4 +92,14 @@
     top: 20%;
     left: 45%;
     box-sizing: border-box;
+
+    @media (max-width:1280px) {
+        max-height: 400px;
+        height: 60%;
+        width: 40%;
+        position: absolute;
+        top: 27%;
+        left: 45%;
+        box-sizing: border-box;
+    }
 }
